force-app/main/default/objects/Address_Enrichment_Requested__e/Address_Enrichment_Requested__e.object-meta.xml
<CustomObject>
    <label>Address Enrichment Requested</label>
    <pluralLabel>Address Enrichment Requesteds</pluralLabel>
</CustomObject>