force-app/main/default/objects/Address_Enrichment_Requested__e/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>Identificador para rastrear a execução entre Salesforce, Hub e logs.</description>
    <label>CorrelationId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>