force-app/main/default/objects/Address_Enrichment_Requested__e/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <description>Id do usuário/processo que solicitou o enriquecimento.</description>
    <label>RequestedBy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>