force-app/main/default/objects/Address_Enrichment_Requested__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Origem da solicitação. Ex: Flow, LWC, Integration, Manual, Trigger.</description>
    <label>Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>